Fix email erros, input 12, add debug mode, get rid of spellcheck marks on input text
https://mail.google.com/mail/u/0/?ui=2&view=btop&ver=5tb04o5c4q0&q=uzzi&qs=true&search=query&th=%23thread-f%3A1634344522205460523&qt=uzzi.1.uzzi%27s.1&cvid=10

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<div class="col-sm-6">
 				
 					<h5>Please insert library congress text</h5>
-					<textarea class="form-control" id="inputArea" rows="12" cols= "50"></textarea>
+					<textarea class="form-control" spellcheck="false" id="inputArea" rows="12" cols= "50"></textarea>
 
 					<div id="keyboard"  class=""
 					onClick="inputArea.focus();"					
