latest LCTP change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
 		<link rel="stylesheet" href="css/main.css">
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     	<meta charset="UTF-8">
     	<meta name="description" content="The LC convertor">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
